# ChangeLog for www-apps/horde
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/horde/ChangeLog,v 1.43 2006/08/23 23:33:37 vapier Exp $

*horde-3.1.3 (23 Aug 2006)

  23 Aug 2006; Mike Frysinger <vapier@gentoo.org> +horde-3.1.3.ebuild:
  Version bump #144874 by Sune Kloppenborg Jeppesen.

*horde-3.1.2-r1 (20 Aug 2006)

  20 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  +files/horde-3.1.2-perms.patch, +horde-3.1.2-r1.ebuild:
  Fix from upstream for #143639 by Chris Carlin.

*horde-3.1.2 (05 Aug 2006)

  05 Aug 2006; Mike Frysinger <vapier@gentoo.org> +horde-3.1.2.ebuild:
  Version bump #142722 by David Bosso.

  22 Jun 2006; Mike Frysinger <vapier@gentoo.org> horde-3.1.1-r1.ebuild:
  Force some tighter permissions on the sql files users run to create horde
  databases #137510 by Sebastian Witt.

  20 Jun 2006; Thomas Cort <tcort@gentoo.org> horde-3.1.1-r1.ebuild:
  Stable on alpha and amd64 wrt security Bug #136830.

  20 Jun 2006; Joshua Jackson <tsunam@gentoo.org> horde-3.1.1-r1.ebuild:
  Stable x86; bug #136830

  17 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org> horde-3.1.1-r1.ebuild:
  Stable on hppa. See bug #136830.

  16 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> horde-3.1.1-r1.ebuild:
  Stable on sparc wrt security #136830

  15 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  horde-3.1.1-r1.ebuild:
  ppc stable, bug #136830

*horde-3.1.1-r1 (15 Jun 2006)

  15 Jun 2006; Luca Longinotti <chtekk@gentoo.org>
  +files/horde-3.1.1-xss.diff, +horde-3.1.1-r1.ebuild:
  Fix bug #136830.

  31 Mar 2006; Jose Luis Rivero <yoswink@gentoo.org> horde-3.1.1.ebuild:
  Stable on alpha wrt security bug #127889

  30 Mar 2006; <blubb@gentoo.org> horde-3.1.1.ebuild:
  stable on amd64 wrt bug 127889

  29 Mar 2006; Tobias Scherbaum <dertobi123@gentoo.org> horde-3.1.1.ebuild:
  ppc stable, bug #127889

  29 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> horde-3.1.1.ebuild: