@@ -1,0 +1,3 @@
+MD5 c6f9fd0e2e4d9898d31d2fcf8a2fe4c8 horde-3.0.10.tar.gz 3737654
+RMD160 0519e36146fb78c752480e8e661a9d2fe1b76af3 horde-3.0.10.tar.gz 3737654
+SHA256 5e47de9aa26f6430fd8f992127cc378f87461483377fb76cd0b5a2d290b18af3 horde-3.0.10.tar.gz 3737654
