@@ -1,0 +1,3 @@
+MD5 fbc56c608ac81474b846b1b4b7bb5ee7 horde-3.1.3.tar.gz 5232958
+RMD160 047e91d5f822d4b1123840cb11612faa71c9880f horde-3.1.3.tar.gz 5232958
+SHA256 c9e7d946f3da447444e0f39ed59e4119d1852ff16d1218bc19450f0cc1568aa6 horde-3.1.3.tar.gz 5232958
